# blog-drf

./: .pre-commit-config.yaml  README.md  db.sqlite3  package.json  pyproject.toml
apps/accounts/: admin.py  factories.py  forms.py  models.py
apps/accounts/management/commands/: seed_database.py
apps/accounts/management/tests/: test_seed_database.py
apps/accounts/migrations/: 0001_accounts.py  0001_initial.py
apps/posts/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/posts/management/tests/: tests_posts_model.py
apps/posts/migrations/: 0001_initial.py
core/: settings.py  urls.py
